syntax = "proto3";

option csharp_namespace = "ApiFirst.Proto";

package ApiFirst;

service WeatherFirst{
	rpc Get(WeatherRequest) returns (WeatherItemResponseMultiple) {} 
}

message WeatherRequest{}
message WeatherItemResponseMultiple{
repeated WeatherItemResponse items=1;
}

message WeatherItemResponse {
	int32  Date = 1;
	int32 TemperatureC = 2;
	int32 TemperatureF = 3;
	string Summary = 4;
}